# hootsimsdl

./: .gitignore  .gitmodules  CMakeLists.txt
main/: CMakeLists.txt
main/src/: DrawManager.cpp  DrawManager.hpp  HootsimApp.cpp  HootsimApp.hpp  HootsimSDLApp.cpp  HootsimSDLApp.hpp  main.cpp
main/src/graphics/: ArrayBuffer.cpp  ArrayBuffer.hpp  GraphicsBuffer.cpp  GraphicsBuffer.hpp
main/src/resource/: ResourceIndex.cpp  ResourceIndex.hpp
opengl/: hootgl.cpp  hootgl.h
